# insta_news

./: .cursorrules  .env_example  .gitignore  .rsync-exclude  DESIGN_CHOICES.MD  DESIGN_CHOICES_WEBSITE.MD  DESIGN_DECISIONS.MD  Dockerfile  ISSUES.MD  PHASE3_COMPLETE.md  README.MD  azci456@134.199.151.58  compose.prod.yaml  compose.yaml  pyproject.toml
DB_tools/: club_keywords.py  reset_db.py  schema.sql
DB_tools/UMSU_Data_Scraping/: UMSU SCRAPING OBSERVATIONS .textClipping  link_keywords.py  scrape_website_information.py  scraper_dependencies.sh  upsert_club.sql  venv_dependencies.sh
basic_website/: .build_prompt  .cursorrules  email_utilites.py  main.py
basic_website/SQL/: yet_to_implement.sql
basic_website/email_system/: EMAIL_UPGRADE.MD  email_smtp_config.py  email_utilites.py
basic_website/templates/: index.html  manage.html  manage_invalid.html
basic_website/utilities/: create_fernet_key.py
deploy/: Caddyfile
documentation/: README.MD  RESTRUCTURING_SRC.md  TODO.MD  src_structure_mermaid.js
etl/UMSU_DATA_SCRAPING/: README.md  listing_scraper.py
etl/bash_scripts/: build_tunnel.sh  con_testing.sh  config_setup.cpp  config_setup.sh  env_handler.sh  generic_port_setup.sh
etl/prod/: data_paths.py  gemini_summariser.py  insta_scraper_prod.py  proxy_notes.md  requirements.txt
etl/reverse_tunnel_mac/: LEARNING_RESOURCES.MD  (+3 more)
scripts/: run_etl.py
src/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_data_paths.py  test_db_insert_gemini_summaries.py  test_post_time_window.py  test_ses_smtp_connection.py  test_web_health.py
(+60 files in other folders)
